added placeholders and experimenting with list items

--- a/www/index.html
+++ b/www/index.html
@@ -37,9 +37,61 @@
       </ion-tabs>
 
       <ion-content>
-        <ul class="list">
-          <li class="item">Item 1</li>
-        </ul>
+        <div class="list">
+          <a href="#" class="item item-icon-left">
+            <i class="icon ion-email"></i>
+            Check Mail
+          </a>
+          <a href="#" class="item item-icon-left item-icon-right">
+            <i class="icon ion-chatbubble-working"></i>
+            Item 02
+            <i class="icon ion-ionic"></i>
+          </a>
+          <a href="#" class="item">
+            <i class="icon ion-mic-a"></i>
+              Item 03
+            <span class="item-note">
+              Record
+            </span>
+          </a>
+          <a href="#" class="item">
+              Item 04
+            <span class="badge badge-assertive">
+              3
+            </span>
+          </a>
+          <a href="#" class="item item-button-right">
+              Item 05
+            <button class="button button-assertive">
+              <i class="icon ion-person"></i>
+            </button>
+          </a>
+          <a href="#" class="item item-avatar">
+            <img src="https://placekitten.com/g/200/300" alt="Avatar"/>
+            Item 06
+          </a>
+          <a href="#" class="item item-thumbnail-left">
+            <img src="https://placekitten.com/g/200/300" alt="Avatar">
+            <h2>Item 07</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+          </a>
+          <div class="item item-divider">Headline 1</div>
+          <a href="#" class="item">Item 08</a>
+          <a href="#" class="item">Item 09</a>
+          <a href="#" class="item">Item 10</a>
+          <a href="#" class="item">Item 11</a>
+          <a href="#" class="item">Item 12</a>
+          <a href="#" class="item">Item 13</a>
+          <a href="#" class="item">Item 14</a>
+          <a href="#" class="item">Item 15</a>
+          <a href="#" class="item">Item 16</a>
+          <a href="#" class="item">Item 17</a>
+          <a href="#" class="item">Item 18</a>
+          <a href="#" class="item">Item 19</a>
+          <a href="#" class="item">Item 20</a>
+        </div>
       </ion-content>
     </ion-pane>
   </body>
